Begin correcting some dark mode features

--- a/src/global.scss
+++ b/src/global.scss
@@ -88,6 +88,8 @@ img {
 	--hover-inverse: var(--white-hover);
 	--outline: var(--red);
 	--card: var(--black-hover);
+
+	--rm-translation: 37.5%;
 }
 
 body {
